--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,4 @@
-ErrorDocument 404 /localhost/error.php
+
+# HTID:16641158: DO NOT REMOVE OR MODIFY THIS LINE AND THE LINES BELOW
+php_value display_errors 1
+# DO NOT REMOVE OR MODIFY THIS LINE AND THE LINES ABOVE HTID:16641158:
